--- a/fedora/http/fedora.cfg
+++ b/fedora/http/fedora.cfg
@@ -24,7 +24,7 @@ timezone America/Los_Angeles --isUtc --ntpservers=0.pool.ntp.org,1.pool.ntp.org,
 # Optional settings
 install
 #cdrom
-url --url="http://dl.kororaproject.org/pub/korora/releases/$releasever/$basearch/"
+#url --url="http://dl.kororaproject.org/pub/korora/releases/$releasever/$basearch/"
 repo --name="Fedora-Everything" --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-$releasever&arch=$basearch
 repo --name="Fedora-Update" --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f$releasever&arch=$basearch
 network --bootproto=dhcp
