--- a/ubuntu/http/preseed.cfg
+++ b/ubuntu/http/preseed.cfg
@@ -61,4 +61,5 @@ d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
 d-i time/zone string UTC
-tasksel tasksel/first multiselect standard, ubuntu-server
+tasksel tasksel/first multiselect standard
+#, ubuntu-server
