--- a/ubuntu/http/preseed.cfg
+++ b/ubuntu/http/preseed.cfg
@@ -19,20 +19,8 @@
 # install from prompting for a hostname
 
 d-i mirror/country string US
-# d-i mirror/country string United States
-# d-i mirror/country select US
-# d-i mirror/country string manual
-# d-i mirror/http/countries select United States
 d-i mirror/http/mirror select us.archive.ubuntu.com
-# d-i mirror/http/hostname string us.archive.ubuntu.com
-# d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string
-# choose-mirror-bin mirror/http/mirror select us.archive.ubuntu.com
-# choose-mirror-bin mirror/country select United States
-# choose-mirror-bin mirror/country string manual
-# choose-mirror-bin mirror/http/mirror select us.archive.ubuntu.com
-# choose-mirror-bin mirror/http/hostname string us.archive.ubuntu.com
-# choose-mirror-bin mirror/http/proxy string
 d-i base-installer/kernel/override-image string linux-server
 d-i clock-setup/utc boolean true
 d-i clock-setup/utc-auto boolean true
@@ -53,7 +41,7 @@ d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 
 #d-i pkgsel/include string openssh-server cryptsetup build-essential libssl-dev libreadline-dev zlib1g-dev linux-source dkms
-d-i pkgsel/include string openssh-server ntp curl nfs-common linux-headers-$(uname -r) build-essential perl dkms
+d-i pkgsel/include string adduser apt apt-utils bzip2 console-setup debconf debconf-i18n eject gnupg ifupdown initramfs-tools iproute2 iputils-ping isc-dhcp-client kbd kmod less locales lsb-release makedev mawk net-tools netbase netcat-openbsd ntpdate passwd procps python3 rsyslog sudo tzdata ubuntu-keyring udev upstart ureadahead vim-tiny whiptail openssh-server openssl-blacklist sshguard chrony curl nfs-common linux-headers-$(uname -r) build-essential perl dkms
 d-i pkgsel/install-language-support boolean false
 # Policy for applying updates.  May be "none" (no automatic updates),
 # "unattended-upgrades" (install security updates automatically), or
@@ -61,5 +49,5 @@ d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
 d-i time/zone string UTC
-tasksel tasksel/first multiselect standard
-#, ubuntu-server
+# tasksel tasksel/first multiselect standard, ubuntu-server, minimal
+tasksel tasksel/first multiselect none
