--- a/ubuntu/http/preseed.cfg
+++ b/ubuntu/http/preseed.cfg
@@ -41,7 +41,7 @@ d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 
 #d-i pkgsel/include string openssh-server cryptsetup build-essential libssl-dev libreadline-dev zlib1g-dev linux-source dkms
-d-i pkgsel/include string adduser apt apt-utils bzip2 console-setup debconf debconf-i18n eject gnupg ifupdown initramfs-tools iproute2 iputils-ping isc-dhcp-client kbd kmod less locales lsb-release makedev mawk net-tools netbase netcat-openbsd ntpdate passwd procps python3 rsyslog sudo tzdata ubuntu-keyring udev upstart ureadahead vim-tiny whiptail openssh-server openssl-blacklist sshguard chrony curl nfs-common linux-headers-$(uname -r) build-essential perl dkms
+d-i pkgsel/include string adduser apt apt-utils bzip2 console-setup debconf eject gnupg ifupdown initramfs-tools iproute2 iputils-ping isc-dhcp-client kbd kmod less locales lsb-release makedev mawk net-tools netbase netcat-openbsd ntpdate passwd procps python3 rsyslog sudo tzdata ubuntu-keyring udev upstart ureadahead vim-tiny whiptail openssh-server openssl-blacklist sshguard chrony curl nfs-common linux-headers-$(uname -r) build-essential perl dkms
 d-i pkgsel/install-language-support boolean false
 # Policy for applying updates.  May be "none" (no automatic updates),
 # "unattended-upgrades" (install security updates automatically), or
