--- a/fedora/http/ks-fedora25.cfg
+++ b/fedora/http/ks-fedora25.cfg
@@ -18,14 +18,20 @@ lang en_US.UTF-8
 keyboard 'us'
 rootpw vagrant
 auth --enableshadow --passalgo=sha512
-timezone UTC
+#timezone UTC
+timezone America/Los_Angeles --isUtc --ntpservers=0.pool.ntp.org,1.pool.ntp.org,2.pool.ntp.org,3.pool.ntp.org
 
 # Optional settings
 install
-cdrom
+#cdrom
+url --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-$releasever&arch=$basearch
+repo --name="fedora-updates" --mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f$releasever&arch=$basearch
+
 network --bootproto=dhcp
-selinux --disabled
+selinux --permissive
+services --enabled=sshd
 firewall --disabled
+#firewall --enabled --ssh
 
 # Avoiding warning message on Storage device breaking automated generation
 zerombr
@@ -40,30 +46,28 @@ autopart
 
 reboot
 
-%ksappend https://raw.githubusercontent.com/digitalr00ts/korora-kickstart/f25-dev/base/core.ks
-%ksappend https://raw.githubusercontent.com/digitalr00ts/korora-kickstart/f25-dev/base/standard.ks
+%include https://raw.githubusercontent.com/digitalr00ts/korora-kickstart/f25-dev/ksappend/basic.ks
+#%include https://raw.githubusercontent.com/digitalr00ts/korora-kickstart/f25-dev/ksappend/xfce.ks
+#%include https://raw.githubusercontent.com/digitalr00ts/korora-kickstart/f25-dev/gui/xfce/desktop.ks
 %packages
 #@core
 
-# These don't load in a kickstart on Fedora 22 - say package is not found
-# Not sure how to specify these packages in a kickstart
-# gcc
-# gcc-c++
-# openssl-devel
-# patch
-# readline-devel
-
-# These don't load in a kickstart on Fedora 24 - say package is not found
-#kernel-devel
-#sqlite-devel
-#zlib-devel
+# Requirements to install VirtualBox Guest
+kernel-devel
+kernel-headers
+make
+binutils
+cpp
+gcc
+glibc-devel
+glibc-headers
+isl
+libmpc
 
 # Requirements for vagrant
 curl
 bzip2
 deltarpm
-kernel-headers
-make
 net-tools
 perl
 sudo
